Add missing word

--- a/edx_proctoring/templates/timed_exam/ready_to_submit.html
+++ b/edx_proctoring/templates/timed_exam/ready_to_submit.html
@@ -4,7 +4,7 @@
     Вы уверены, что хотите завершить тестирование?
   </h3>
   <p>
-    Убедитесь в том, что вы нажали кнопку «Отправить» под каждым заданием.
+    Убедитесь в том, что вы нажали кнопку «Отправить» под каждым выполненным заданием.
   </p>
   <button type="button" name="submit-proctored-exam" class="exam-action-button btn btn-pl-primary btn-base" data-action="submit" data-exam-id="{{exam_id}}" data-change-state-url="{{change_state_url}}">
     {% blocktrans %}
